# spirens

./: .editorconfig  .env.example  .envrc  .gitignore  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .shellcheckrc  .yamllint.yml  CLAUDE.md  README.md  SKILL.md  mkdocs.yml  pyproject.toml  requirements.txt
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: docs.yml  lint.yml
caddy/: SKILL.md
cloudflare/: SKILL.md
compose/single-host/: compose.dweb-proxy.yml  compose.erpc.yml  compose.ipfs.yml  compose.redis.yml  compose.traefik.yml  compose.yml
compose/swarm/: stack.dweb-proxy.yml  stack.erpc.yml  stack.ipfs.yml  stack.redis.yml  stack.traefik.yml
config/dns/: records.yaml
config/dweb-proxy/: hostname-map.json
dns/: SKILL.md
docs/: 00-overview.md  01-prerequisites.md  02-dns-and-cloudflare.md  03-certificates.md  04-deployment-profiles.md  04-traefik.md  05-ethereum-node.md  05-traefik.md  06-erpc.md  06-ethereum-node.md  07-erpc.md  07-ipfs.md  08-dweb-proxy.md  08-ipfs.md  09-dweb-proxy.md  09-troubleshooting.md  10-deployment-profiles.md  10-troubleshooting.md  cli.md  helios.md  index.md  llms.txt  security.md  skills.md  swarm.md  upgrading.md
ens-resolution/: SKILL.md
erpc/: SKILL.md
gateways/: SKILL.md
helios/: SKILL.md
ipfs/: SKILL.md
ipns/: SKILL.md
lets-encrypt/: SKILL.md
nginx/: SKILL.md
scripts/: bootstrap.sh  configure-ipfs.sh  down.sh  encode-hostname-map.sh  gen-htpasswd.sh  health-check.sh  up.sh
ship/: SKILL.md
tests/: conftest.py  test_cli_help.py  test_config.py  test_dns_provider.py  test_e2e_harness.py  test_env.py  test_erpc_config.py  test_health.py  test_hostname_map.py  test_runner.py  test_secrets.py  test_topology.py  test_wizard.py
tls-acme/: SKILL.md
topology/: SKILL.md
traefik/: SKILL.md
(+83 files in other folders)
